# gangge-code

./: .env.example  .gitignore  README.md  README_EN.md  pyproject.toml  requirements.txt  操作问题总结.txt
.gangge_data/: mcp_servers.json  sessions.db  sessions.db-shm  sessions.db-wal
desktop/: app.py
src/gangge/: cli.py  cli_repl.py  pricing.py
src/gangge/i18n/: en.json  zh.json
src/gangge/layer1_ui/: terminal.py
src/gangge/layer2_session/: manager.py
src/gangge/layer3_agent/: loop.py
src/gangge/layer3_agent/prompts/: system.py
src/gangge/layer3_agent/tools/: ask_user.py  bash.py  file_ops.py  lint_check.py  registry.py  search.py  web.py
src/gangge/layer4_permission/: rules.py
src/gangge/layer4_tools/: shadow_git.py
src/gangge/layer5_llm/: anthropic.py  base.py  openai_compat.py  registry.py
